--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -304,6 +304,11 @@ div.post-meta {
 
 }
 
+a.tag {
+    color: inherit;
+    font-size: 10px;
+}
+
 
 //////////////////////////////////////////////////
 //             article and page                 //
