--- a/templates/article.html
+++ b/templates/article.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
+{% block og %}
+{% include "partial/og_article.html" %}
+{% endblock %}
+{% block head %}
+{{ super() }}
+        <meta name="author" content="{{ article.author.name }}" />
+        <meta name="description" content="{{ article.summary|striptags|escape }}" />
+{% endblock %}
 {% block title %}{{ article.title|striptags }}{% endblock %}
 {% block content %}
 <div class="page-container">
@@ -9,6 +17,7 @@
                 <a href="{{ SITEURL }}/{{ article.category.url }}"><img src="{{ MEDIUS_CATEGORIES.get(article.category|string).thumbnail }} " class="post-avatar" alt="{{ article.category|striptags }}"></a>
             </div>
             {% endif %}
+
             {% include "includes/post_metadata.html" %}
         </div>
     </div>
@@ -59,51 +68,6 @@
             {% endfor %}
         </div>
         {% endif %}
-        <div class="pure-g post-footer">
-            {% if article.authors %}
-            <div class="pure-u-1 pure-u-md-1-2">
-                {% for author in article.authors %}
-                <div class="pure-g poster-info">
-                    {% if author|string in MEDIUS_AUTHORS %}
-                    <div class="pure-u">
-                        <a href="{{ SITEURL }}/{{ author.url }}"><img src="{{ MEDIUS_AUTHORS.get(author|string).image }}" alt=""></a>
-                    </div>
-                    {% endif %}
-                    <div class="pure-u-3-4">
-                        <h3 class="author-name"><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a></h3>
-                        <p class="author-description">
-                          {% if MEDIUS_AUTHORS %}
-                          {{ MEDIUS_AUTHORS.get(author|string).description }}
-                          {% endif %}
-                        </p>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            {% endif %}
-
-
-            {% if article.category|string in MEDIUS_CATEGORIES %}
-            <div class="pure-u-1 pure-u-md-1-2">
-
-                <div class="pure-g post-category-info">
-                    <div class="pure-u">
-                        <a href="{{ SITEURL }}/{{ article.category.url }}"><img src="{{ MEDIUS_CATEGORIES.get(article.category|string).thumbnail }}" alt=""></a>
-                    </div>
-                    <div class="pure-u-3-4">
-                        <h3 class="author-name"><a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></h3>
-                        <p class="author-description">
-                          {{ MEDIUS_CATEGORIES.get(article.category|string).description }}
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            {% endif %}
-
-        </div>
-
-
     </footer>
 
     {% if DISQUS_SITENAME %}
