--- a/templates/article.html
+++ b/templates/article.html
@@ -1,82 +1,102 @@
 {% extends "base.html" %}
 {% block og %}
-{% include "partial/og_article.html" %}
+  {% include "partial/og_article.html" %}
 {% endblock %}
 {% block head %}
-{{ super() }}
-        <meta name="author" content="{{ article.author.name }}" />
-        <meta name="description" content="{{ article.summary|striptags|escape }}" />
+  {{ super() }}
+  <meta name="author" content="{{ article.author.name }}"/>
+  <meta name="description" content="{{ article.summary|striptags|escape }}"/>
 {% endblock %}
 {% block title %}{{ article.title|striptags }}{% endblock %}
 {% block content %}
-<div class="page-container">
-    <div class="entry-content">
-        <div class="post-meta pure-g">
-            {% if article.category|string in MEDIUS_CATEGORIES %}
-            <div class="pure-u">
-                <a href="{{ SITEURL }}/{{ article.category.url }}"><img src="{{ MEDIUS_CATEGORIES.get(article.category|string).thumbnail }} " class="post-avatar" alt="{{ article.category|striptags }}"></a>
-            </div>
-            {% endif %}
-
-            {% include "includes/post_metadata.html" %}
+  <div class="page-container">
+  <div class="entry-content">
+    <div class="post-meta pure-g">
+      {% if article.category|string in MEDIUS_CATEGORIES %}
+        <div class="pure-u">
+          <a href="{{ SITEURL }}/{{ article.category.url }}"><img
+              src="{{ MEDIUS_CATEGORIES.get(article.category|string).thumbnail }} " class="post-avatar"
+              alt="{{ article.category|striptags }}"></a>
         </div>
+      {% endif %}
+
+      {% include "includes/post_metadata.html" %}
     </div>
+  </div>
 
-    <div class="article-header-container">
-        <div class="background-image-container">
+  <div class="article-header-container">
+    <div class="background-image-container title">
 
-            {# title with big background image #}
-            {% if article.cover %}
-            <div class="background-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url({{ article.cover }});">
-                <img src="{{ article.cover }}" alt="{{ article.title|striptags }}">
-                <div class="title">
-                <h1>
-                    {{ article.title }}
-                </h1>
-                {% if article.subtitle %}
-                <h2>
-                    {{ article.subtitle }}
-                </h2>
-                {% endif %}
-                </div>
-            </div>
-            {% else %}
-            <div class="background-image-small">
-                {% if article.thumbnail %}
-                <img src="{{ article.thumbnail }}" alt="{{ article.title|striptags }}">
-                {% endif %}
-                <div class="title-container">
-                    <h1>{{ article.title }}</h1>
-                    {% if article.subtitle %}
-                    <h4>{{ article.subtitle }}</h4>
-                    {% endif %}
-                </div>
-            </div>
+      {# title with big background image #}
+      {% if article.cover %}
+        <div class="background-image"
+             style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url({{ article.cover }});">
+          <img src="{{ article.cover }}" alt="{{ article.title|striptags }}">
+          <div class="title">
+            <h1>
+              {{ article.title }}
+            </h1>
+            {% if article.subtitle %}
+              <h2>
+                {{ article.subtitle }}
+              </h2>
             {% endif %}
+          </div>
         </div>
-
-    <div class="entry-content">
-        <!--insert table of contents between text and first header-->
-        {{ article.content.split('<h')[0]}}
-        {% if article.toc %}
+      {% else %}
+        <div class="background-image-small">
+          {% if article.thumbnail %}
+            <img src="{{ article.thumbnail }}" alt="{{ article.title|striptags }}">
+          {% endif %}
+          <div class="title-container">
+            <h1>{{ article.title }}</h1>
+            {% if article.subtitle %}
+              <h4>{{ article.subtitle }}</h4>
+            {% endif %}
+          </div>
+        </div>
+      {% endif %}
+    </div>
+    <div class="entry-content article">
+      <!--insert table of contents between text and first header-->
+      {{ article.content.split('<h')[0] }}
+      {% if article.toc and article.add_toc %}
         <hr>
         <div class="pure-u">
-            {{article.toc}}
+          {{ article.toc }}
         </div>
         <hr>
-        {% endif %}
-        {{'<h' + article.content.split('<h')[1:]|join('<h')}}
+      {% endif %}
+      {{ '<h' + article.content.split('<h')[1:]|join('<h') }}
     </div>
-
-    <footer>
-        {% if article.tags %}
-        <div class="tags">
-            {% for tag in article.tags %}
-            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a>
-            {% endfor %}
-        </div>
+    <div class="entry-content footer">
+      <hr>
+      <div class="pure-g">
+        {% if APPLAUSE_BUTTON %}
+          <div class="pure-u-1-2">
+            <applause-button style="width: 58px; height: 58px;"/>
+          </div>
         {% endif %}
-    </footer>
-</div>
+        {% if article.tags %}
+          <div class="tags pure-u-1-2">
+            {% for tag in article.tags %}
+              <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a>
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+      {% if UTTERANCES_REPO %}
+        <script src="https://utteranc.es/client.js"
+                repo="{{ UTTERANCES_REPO }}"
+                issue-term="{{ article.slug|default('url') }}"
+                label="{{ UTTERANCES_LABEL|default('comments') }}"
+                theme="{{ UTTERANCES_THEME|default('github-light') }}"
+                crossorigin="anonymous"
+                async>
+        </script>
+      {% endif %}
+
+    </div>
+  </div>
 
 {% endblock %}
