--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,11 @@
         {% block og %}
         {% include "partial/og.html" %}
         {% endblock %}
+        {% if APPLAUSE_BUTTON %}
+        {# add applause/like button https://applause-button.com/ #}
+        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/applause-button.css" />
+          <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/applause-button.js"></script>
+        {% endif %}
 </head>
 <body>
 
